--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -324,6 +324,9 @@ body{
   font-family: "59";
   margin:0 0 5px 0;
 }
+.txt5{
+  border-bottom: 2px solid rgba(0, 170, 0, 1.5);
+}
 .slider__txt3{
   font-size: 0.75em;
   margin:0 0 0 30px;
